--- a/Deliverable.Rmd
+++ b/Deliverable.Rmd
@@ -1,8 +1,12 @@
 ---
-title: "Deliverable"
+title: "Can We Save the Declining Domestic Film Industry?"
 author: "Xiru Lyu"
-date: "5/2/2018"
-output: html_document
+date: "5/6/2018"
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+bibliography: paper.bib
 ---
 
 ```{r setup, include=FALSE, message=FALSE}
@@ -13,29 +17,37 @@ library(gridExtra)
 ```
 
 
-## Summary for the full dataset
+## Background
+
+Watching movies has always been a popular way of entertainment for many Americans. According to @STATISTA, the US is the third largest film market in the world, with about 13% of Americans going to see movies about once every month, while about 7% of Americans are moviegoers who visit movie theaters several times a month. In addition, Hollywood strives to play a dominant role in the world film industry since many popular movies nowadays were produced by Hollywood. However, many recent articles address concerns over the future of domestic movie industry. As pointed out by @Verge, domestic movie attendance hit 25-year low in 2017, while domestic revenue dropped 2.7% from 2016 despite higher ticket prices. She identifies several threats that the domestic movie industry is facing right now: rising ticket prices, and increasing competition from streaming services like Netflix, Amazon and HBO GO. Even worse, @Vanity states that the traditional film industry is hurt by the popularity of stimulating original contents made by Netflix. Thus, players in the industry are facing huge challenges on how they shall adapt to these changes and get prepared for any other forthcoming shifts. This study intends to help movie businesses to understand the US film market in the recent decade through a “supply and demand” analysis, which is to look at to what extent movies released in theaters match audiences’ preferences and if any improvement can be made so that future movies can attract more viewers. 
+
+## Data Description
+
+The study analyzes gross box office, genres, voting score and release date on films released from 2008-01-01 to 2018-04-21. Box office data were downloaded from [The Numbers]( http://www.the-numbers.com), which is an open platform tracking information on movie businesses, with the help of R package [“boxoffice”](https://CRAN.R-project.org/package=boxoffice). The raw dataset includes title, total gross box office, production company, date the information was collected, number of days the movie has been in theaters for each movie. It is worth noting that release dates used in this study weren’t taken directly from [TMDb](https://www.themoviedb.org) but were calculated by subtracting the number of days the movie has been in theaters from the date of its last day on view, both are available in the dataset downloaded from [The Numbers]( http://www.the-numbers.com). Thus, they may be a bit different from information listed on [TMDb]( https://www.themoviedb.org). 
+
+## Descriptive Analysis 
 
 ```{r, fig.width=12}
 plot_1
 ```
 
-```{r, fig.width=12}
+```{r, fig.width=12, fig.height=8}
 plot_2
 ```
 
-```{r, fig.width=12}
+```{r, fig.width=12, fig.height=8}
 plot_3
 ```
 
-```{r}
+```{r, fig.width=12, fig.height=6}
 plot_4
 ```
 
-```{r}
+```{r, fig.width=12, fig.height=6}
 plot_5
 ```
 
-```{r}
+```{r, fig.width=12, fig.height=6}
 plot_6
 ```
 
@@ -134,3 +146,20 @@ grid.arrange(oscars_box, oscars_vote, nrow = 1, ncol = 2)
 oscars_box_vote
 ```
 
+## Most recent movies
+
+```{r fig.height=12, fig.width=12}
+recent_time
+```
+
+```{r fig.height = 12, fig.width=12}
+recent_genre
+```
+
+```{r fig.height = 10, fig.width=12}
+recent_oscars
+```
+
+## Conclusions
+
+## References
