--- a/Deliverable.Rmd
+++ b/Deliverable.Rmd
@@ -19,45 +19,106 @@ library(gridExtra)
 
 ## Background
 
-Watching movies has always been a popular way of entertainment for many Americans. According to @STATISTA, the US is the third largest film market in the world, with about 13% of Americans going to see movies about once every month, while about 7% of Americans are moviegoers who visit movie theaters several times a month. In addition, Hollywood strives to play a dominant role in the world film industry since many popular movies nowadays were produced by Hollywood. However, many recent articles address concerns over the future of domestic movie industry. As pointed out by @Verge, domestic movie attendance hit 25-year low in 2017, while domestic revenue dropped 2.7% from 2016 despite higher ticket prices. She identifies several threats that the domestic movie industry is facing right now: rising ticket prices, and increasing competition from streaming services like Netflix, Amazon and HBO GO. Even worse, @Vanity states that the traditional film industry is hurt by the popularity of stimulating original contents made by Netflix. Thus, players in the industry are facing huge challenges on how they shall adapt to these changes and get prepared for any other forthcoming shifts. This study intends to help movie businesses to understand the US film market in the recent decade through a “supply and demand” analysis, which is to look at to what extent movies released in theaters match audiences’ preferences and if any improvement can be made so that future movies can attract more viewers. 
+Watching movies has always been a popular way of entertainment for many Americans. According to @STATISTA, the US is the third largest film market in the world, with about 13% of Americans going to see movies about once every month, while about 7% of Americans are moviegoers who visit movie theaters several times a month. In addition, Hollywood strives to play a dominant role in the world film industry since many popular movies nowadays were produced by Hollywood. However, many recent articles address concerns over the future of domestic movie industry. As pointed out by @Verge, domestic movie attendance hit 25-year low in 2017, while domestic revenue dropped 2.7% from 2016 despite higher ticket prices. She identifies several threats that the domestic movie industry is facing right now: rising ticket prices, and increasing competition from streaming services like Netflix, Amazon and HBO GO. Even worse, @Vanity states that the traditional film industry is hurt by the popularity of stimulating original contents made by Netflix. Thus, players in the industry are facing huge challenges on how they shall adapt to these changes and get prepared for any other forthcoming shifts. 
+
+This study intends to help movie businesses to understand the US film market in the recent decade through a “supply and demand” analysis using data from 2008 to 2018 [^1], exploring the extent that movies released in theaters match audiences’ preferences and if any improvement can be made so that future movies can attract more viewers. 
+
+[^1]: More specifically, data span the time frame between 2008-01-01 and 2018-04-12.
+
+The report is divided into six main sections to discuss characteristics of movies supplied by producers and consumer preferences: 
+
+1. Overview of all movies released between 2008 and 2018
+
+2. Analysis of movies with the highest yearly box office
+
+3. Analysis of movies with the highest monthly box office
+
+4. Analysis of movies with the lowest yearly box office
+
+5. Analysis of movies with the lowest monthly box office
+
+6. Analysis of movies winning Oscars Best Picture from 2008 to 2017
+
+Information on data description as well as detailed analysis are presented in subsequent sections.
 
 ## Data Description
 
-The study analyzes gross box office, genres, voting score and release date on films released from 2008-01-01 to 2018-04-21. Box office data were downloaded from [The Numbers]( http://www.the-numbers.com), which is an open platform tracking information on movie businesses, with the help of R package [“boxoffice”](https://CRAN.R-project.org/package=boxoffice). The raw dataset includes title, total gross box office, production company, date the information was collected, number of days the movie has been in theaters for each movie. It is worth noting that release dates used in this study weren’t taken directly from [TMDb](https://www.themoviedb.org) but were calculated by subtracting the number of days the movie has been in theaters from the date of its last day on view, both are available in the dataset downloaded from [The Numbers]( http://www.the-numbers.com). Thus, they may be a bit different from information listed on [TMDb]( https://www.themoviedb.org). 
+```{r}
+total_num <- final %>% dplyr::select(-genres) %>% n_distinct()
+found_num <- final %>% dplyr::select(-genres) %>% filter(is.na(id) == FALSE) %>% n_distinct()
+NA_num <- final %>% dplyr::select(-genres) %>% filter(is.na(id) == TRUE) %>% n_distinct()
+```
 
-## Descriptive Analysis 
+The study analyzes gross box office, genres, voting score and release date on films released from 2008-01-01 to 2018-04-12. A ten-year span was chosen in order to reflect changes of audiences’ preferences and types of movies produced. US domestic box office data were downloaded from [The Numbers]( http://www.the-numbers.com), which is an open platform tracking information on movie businesses, with the help of R package [“boxoffice”](https://CRAN.R-project.org/package=boxoffice). The raw dataset includes each movie’s title, total gross box office, date the information was collected, total number of days in theaters. Detailed information on movies, such as TMDb ID, IMDb ID, genres, and voting score was collected in two ways. Information on movies released on or before July 2017 were found in [“The Movies Dataset”]( https://www.kaggle.com/rounakbanik/the-movies-dataset) from [Kaggle]( https://www.kaggle.com), while movies released after July 2017 had information downloaded using public API from [TMDb (The Movie Database)](https://www.themoviedb.org), which is a community built movie and TV database very similar to [IMDb (Internet Movie Database)](http://imdb.com). Two datasets were then joined together primarily by matching movie titles, and a lot of data cleaning work was required to ensure a successful merge. In the end, the complete dataset contains title, TMDb ID, IMDb ID, genres, release year, release month, voting score on TMDb, gross box office for every movie released between 2008-01-01 and 2018-04-12. A total of `r total_num` films were used for analysis, with `r found_num` films having complete information and `r NA_num` films only having box office data but missing detailed information. 
 
-```{r, fig.width=12}
+It is worth noting that release dates used in this study weren’t taken directly from [TMDb](https://www.themoviedb.org) but were calculated by subtracting the *number of days* the movie has been in theaters from the *date of its last day on view*, both are available in the dataset downloaded from [The Numbers](http://www.the-numbers.com). Thus, release dates may be a bit different from those listed on [TMDb](https://www.themoviedb.org). 
+
+Since [IMDb](http://imdb.com) requires permission to use its data, [TMDb](https://www.themoviedb.org) becomes the best substitute for collecting move information. However, there are several issues associated with the site, potentially affecting data accuracy. [TMDb](https://www.themoviedb.org), as mentioned before, is a community built database, meaning that essentially everyone can contribute to any entry. As a result, movie genres and IMDb IDs listed may not be 100% correct, and voting scores can only reflect preferences of those who actually voted on the site. Moreover, there are several cases that multiple pages were created for the same movie, and during the data cleaning process, only one page with the most complete information was selected for movies having this situation.
+
+
+## General Overview of Movies Released Between 2008 and 2018 [^2]
+
+[^2]: Some graphs in this and following sections may be hard to read due to the amount of variables plotted. It is highly recommended to go to https://xlyu.shinyapps.io/MA615_final_project/, using more interactive graphs under the tab ["Detailed Reports"](https://xlyu.shinyapps.io/MA615_final_project/)for clearer visualizations.
+
+This section focuses on analyzing all movies released between 2008-01-01 and 2018-04-21. It tries to capture general trends of movies released in theaters and audiences' preferences using all available information.
+
+### Number of Movies Released by Year and by Month
+
+```{r, fig.width=12, fig.cap="Figure 1: Number of Movies Released by Year and by Month"}
 plot_1
 ```
 
-```{r, fig.width=12, fig.height=8}
+Figure 1 above shows number of movies released every year while each colored bar represents number of movies released every month. It can be inferred that 2011 is the year with the most number of movies released but the market then experienced severe contraction, as 2012 being the year with the lease number of movies released. Generally, more movies are released in May, August, September and December. Many documentary movies were released every year before 2012 but is no longer the case after that. In addition, starting from 2013, many more movies are released in October.
+
+### Number of Movies Released Based On Genres
+
+Two figures below help us to see how number of movies released for each genre vary by year and by month. Note that each movie can have one or more genres. 
+
+```{r, fig.width=12, fig.height=8, fig.cap="Figure 2: Number of Movies Released by Year Based on Genres"}
 plot_2
 ```
 
-```{r, fig.width=12, fig.height=8}
+Most released movies have genres such as romance, thriller, comedy and drama. The amount of movies released with these genres don’t vary a lot either by year and by month. Moreover, more adventure movies and horror movies are released in the recent two years. The number of foreign movies in theaters decreases sharply in recent years. Many documentary movies were released every year before 2012 but is no longer the case after that. In addition, starting from 2013, many more movies are released in October.
+
+```{r, fig.width=12, fig.height=8, fig.cap="Figure 3: Number of Movies Released by Month Based on Genres"}
 plot_3
 ```
 
-```{r, fig.width=12, fig.height=6}
-plot_4
-```
+There are slightly more drama movies released starting from August every year. More thriller and action movies are released from August to October. Many horror movies are released in September and October. Besides, there are significant more romance and adventure movies released in the last two months of a year.
 
-```{r, fig.width=12, fig.height=6}
+### Box Office vs. Genres
+```{r, fig.width=12, fig.height=6, fig.cap="Figure 4: Box Office vs. Genres"}
 plot_5
 ```
 
-```{r, fig.width=12, fig.height=6}
+
+### Voting Score vs. Genres
+
+```{r, fig.width=12, fig.height=6, fig.cap="Figure 5: Voting Score vs. Genres"}
 plot_6
 ```
 
 
+### Gross Box Office vs. Voting Score
+
+```{r, fig.width=12, fig.height=6, fig.cap="Figure 6: Gross Box Office vs. Voting Score"}
+plot_4
+options(digits = 0)
+full_corr <- cor(final$gross, final$vote_average, use = "na.or.complete")
+```
+
+Figure 6 plots each movie’s gross box office and voting score, and a fitted line has been added to the graph. It seems that most movies released between 2008 and 2018 have voting scores between 5 and 7.5. Despite relatively high voting scores, movies released in the recent three years have lower box office compared with movies released before. In addition, the fitted line suggests that high box office is associated with high voting score, but the correlation is only `r full_corr`, too small to form a convincing argument that these two variables have strong positive relationship.
+
 ## Films with the most yearly gross box office
 
-### Comparison of box office
+### Gross Box Office vs. Voting Score
 
 ```{r fig.width=10, fig.height=7.5}
 grid.arrange(h_1_box, h_1_rate, nrow = 1, ncol = 2)
+```
+
+```{r}
+h_1_box_vote
 ```
 
 ### By genre
@@ -66,9 +127,6 @@ grid.arrange(h_1_box, h_1_rate, nrow = 1, ncol = 2)
 h_1_genre
 ```
 
-```{r}
-h_1_box_vote
-```
 
 ```{r}
 grid.arrange(h_1_box_genre, h_1_vote_genre, nrow = 1, ncol = 2)
